--- a/src/AddTeacher.form
+++ b/src/AddTeacher.form
@@ -296,6 +296,15 @@
           </model>
         </properties>
       </component>
+      <component id="789c3" class="javax.swing.JButton" binding="btBack">
+        <constraints>
+          <grid row="11" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <font name="Segoe Print" size="18" style="1"/>
+          <text value="Back"/>
+        </properties>
+      </component>
     </children>
   </grid>
 </form>
