--- a/src/StudentResult.form
+++ b/src/StudentResult.form
@@ -53,6 +53,14 @@
           <text value="Result"/>
         </properties>
       </component>
+      <component id="2891c" class="javax.swing.JButton" binding="btBack">
+        <constraints>
+          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Back"/>
+        </properties>
+      </component>
     </children>
   </grid>
 </form>
